Working Kin With Direction P2

--- a/NEATImplementation/.gitignore
+++ b/NEATImplementation/.gitignore
@@ -6,3 +6,8 @@
 /NetworkRecognition.class
 /Node.class
 /Sprite.class
+/Agent.class
+/Environment$1.class
+/Environment.class
+/GUI.class
+/Object.class
