--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/ptdav/Desktop/FinalProject/AI_For_Robots_Final_Projecty/Library/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ptdav/Desktop/FinalProject/AI_For_Robots_Final_Projecty/Library/org.json.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
